--- a/INSTALL
+++ b/INSTALL
@@ -14,9 +14,8 @@ the contents of the source distribution:
  makefile.bcc   - makefile for borland c++
 
  main.cpp       - main program file                             (C++)
- verbose.cpp    - + auxiliary file                              (C++)
+ pattern.*      - + automatic variables                         (C++)
  sedit.*        - string formatting                             (C++)
- charconv.*     - character conversion                          (C++)
  set_base.*     - abstract patch class                          (C++)
  setid3.*       - + id3v1 implementation                        (C++)
  getid3.*       - + id3v1 reader                                (C++)
@@ -26,6 +25,8 @@ the contents of the source distribution:
  setecho.*      - + stdout formatter                            (C++)
  varexp.*       - wildcard/pattern matching class               (C++)
  fileexp.*      - filefinder/matcher                            (C++)
+ mass_tag.*     - + tagging engine                              (C++)
+ charconv.*     - character conversion                          (C++)
  auto_dir.h     - smart dirent pointer class                    (C++)
 
  id3v1.*        - definitions & data relevant to ID3v1 tag data (C)
