--- a/CHANGES
+++ b/CHANGES
@@ -2,7 +2,7 @@ Changelog for 'id3'.
 
 2005-308 (W44):
   main.cpp: split up in mass_tag.cpp and pattern.cpp.
-  set_base.cpp: simplified.
+  set_base.cpp: simplified set_tag::combined into set_tag::group
 
 2005-305 (W44):
   setid3v2.cpp: rewrote binarize (using shared categorisations)
@@ -226,6 +226,7 @@ Todo list:
   - Document %F (Unless it becomes %p)
   - Reading MP3 data (Bitrate, length, etc. Half done.)
   - Cross-directory renaming/moving
+  - Setting content descriptors in ID3v2 (how?)
   - Conditional expressions
   - Long options
   - More things:
@@ -235,7 +236,6 @@ Todo list:
   - Internationalization (Unicode)
     + Add support for UTF16 in ID3v2
     + Enable multibyte encodings for varexp (no priority)
-  - Tag handling(/removal) for ID3v2 prior 3
   - Extend substitution capabilities (i/o? slice?)
   - User configurable switches (.rc file?)
 
