--- a/CHANGES
+++ b/CHANGES
@@ -1,16 +1,22 @@
 Changelog for 'id3'.
 
+2006-030 (W04):
+  main.cpp: user checks: ignore extra file arguments when using -m, ignore
+    options after first filename was given (regression)
+
 2006-027 (W04):
   small portability fixes
+  mass_tag.cpp: split %x; %x is for autonumbering, %X for counting files,
+    added %p (path) to complement %f (filename)
 
 2006-025 (W04):
-  main.cpp: added -P (preserve time stamp)
+  main.cpp: added -M (preserve time stamp)
   main.cpp: added -D (replace tag by that from a different file)
   other small tweaks, partial i18n outside of Linux
 
 2006-024 (W04):
   adapted to use new replacement function; totally empty variables will not
-    clobber existing values now.
+    clobber existing values now; also means -u will truly be 'update'.
 
 2005-362 (W52):
   charconv.*: redesigned character conversion, support for win/dos
@@ -245,7 +251,7 @@ Changelog for 'id3'.
 
 Todo list:
 
-  - Document %F (Unless it becomes %p)
+  - Change -R into a switch instead of an option? (Ditch `find' behavior?)
   - Reading MP3 data (Bitrate, length, etc. Half done.)
   - Cross-directory renaming/moving
   - Setting content descriptors in ID3v2 (how?)
@@ -255,9 +261,7 @@ Todo list:
     + Support for Ogg Vorbis
     + Support for APEv2
     + Support for Lyrics3 v2.0 (no priority)
-  - Internationalization (Unicode)
-    + Add support for UTF16 in ID3v2
-    + Enable multibyte encodings for varexp (no priority)
+  - Enable multibyte encodings for varexp?
   - Extend substitution capabilities (i/o? slice?)
   - User configurable switches (.rc file?)
 
